--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <h1>Привет!</h1>
-    <script src="./js/script.js"></script>
+    <label>
+      Число
+      <input type="number" dada-value />
+    </label>
+    <button type="button" data-add>Прибавить</button>
+    <button type="button" data-reset>Очистить</button>
+    <p class="js-output">Сумма: <span>0</span></p>
+    <script src="./js/script.js" type="module"></script>
   </body>
 </html>
